Add custom gradient wave favicon

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,9 +7,16 @@
   <meta name="theme-color" content="#0a0e17" />
   <meta name="description" content="Unsteady MHD Nanofluid Couette Flow - Transient Analysis Simulation" />
   <title>Unsteady MHD Nanofluid Flow | Transient Analysis</title>
+  
+  <!-- Favicon -->
+  <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&family=Fira+Code:wght@400;500;600&display=swap" rel="stylesheet">
+  
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { 
@@ -58,3 +66,5 @@
   </div>
 </body>
 </html>
+
+```
